sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: not found: value i
  i = 0;
  ^AlgGnomeSort:4: error: not found: value i
  while(i+1 < getValueCount()) {
        ^AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i, i+1)) {
                  ^AlgGnomeSort:5: error: not found: value i
    if (isSmaller(i, i+1)) {
                     ^AlgGnomeSort:6: error: not found: value i
      i+=1;
      ^AlgGnomeSort:8: error: not found: value i
      swap(i, i+1);
           ^AlgGnomeSort:8: error: not found: value i
      swap(i, i+1);
              ^AlgGnomeSort:10: error: not found: value i
      if (i-1>=0)
          ^AlgGnomeSort:11: error: not found: value i
      	i-=1;
        ^AlgGnomeSort:13: error: not found: value i
      	i+=1;
        ^